  regexp's in /spamfilter. Thanks to Ville Laurikari for coming up with the
  method!
- Removed the old/unused src/win32/version.c (#0001630) reported by fez
- Updated docs to mention except tkl {} type qline/gqline
- spamfilter.conf: added soex trojan. Sig provided by Jay.
- Fixed a spamfilter memory leak
- Added '__' -> '_' decoding for spamfilter reason field.
- Made it so set::modes-on-join correctly works with extcmodes. Note: to 
  correctly work with modes created by modules, the module _must_ call CmodeAdd
  from Mod_Test (#0001624) reported by thunderbirdjl
- Made some changes to the curlinstall script to make it work with c-ares-1.0.0
  also updated INSTALL.REMOTEINC
- Fixed a typo in the /credits
- Made it so curlinstall doesn't use cp -f since it is nonportable
- Hide server IP in /stats z
- First Opteron crash bugfix. Thanks to Liverbugg for helping us trace this issue.
- More Opteron fixes... sizeof() fun, %B fun (always use a 'long'!), etc..
- Added __attribute__ stuff for ircsprintf() to catch more warnings.
- Fixed win32 compile problem. Reported by Troco (#0001644).
- Added a missing ',' to the version.c.SH script reported by docco (#0001643)
- Added conf check for too large spamfilter regex + reason field. Reported by
  Z3l3zT (#0001648).
- Added spamfilters for the Nkie worm
- Fixed a little sqline recode memory leak
- Fixed /spamfilter removal problem... often the wrong entry was removed [!] or
  nothing was removed at all. Reported by MiNdErAsR, RealCFC and others (#0001669).
- Fixed /spamfilter reason field bug.. things were double escaped sometimes,
  especially in post-RC2-cvs this was noticable. Reported by Fury (#0001670).
- help.conf: updated snomasks section.
- Added a patch by baafie to fix a problem where environment variables could not
  be specified in the Config script (#0001657)
- Imported TRE 0.6.6 on Win32 and Linux
- Made use of TRE's pkg-config support to solve a problem with libintl reported by
  raistlinmajere (#0001592)